# radioactive-decay-by-chatgpt

./: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  GMTubeHit.hh  GMTubeSD.cc  GMTubeSD.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  main.cc
experimental-data/: plot-t10.c  plot-t20.c
